--- a/svg-editor.html
+++ b/svg-editor.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="jgraduate/css/jgraduate.css" type="text/css"/>
 <link rel="stylesheet" href="svg-editor.css" type="text/css"/>
 <link rel="stylesheet" href="spinbtn/JQuerySpinBtn.css" type="text/css"/>
-<link rel="stylesheet" href="custom.css" type="text/css"/>
+
 <!--{if jquery_release}>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <!{else}-->
@@ -68,6 +68,7 @@ by creating the following file and adding by calls to svgEditor.setConfig -->
 <title>SVG-edit</title>
 </head>
 <body>
+    <script src="https://framasoft.org/nav/nav.js" type="text/javascript"></script>
 <div id="svg_editor">
 
 <div id="rulers">
